MS-1: [dependencies] Add capacitor-data-storage-sqlite plugin and Ionic PWA elements as dependencies

--- a/package.json
+++ b/package.json
@@ -55,8 +55,10 @@
     "@capacitor/cli": "^2.4.7",
     "@capacitor/core": "^2.4.7",
     "@capacitor/ios": "^2.4.7",
+    "@ionic/pwa-elements": "^3.0.2",
     "@material-ui/core": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "capacitor-data-storage-sqlite": "^2.4.7",
     "history": "^4.10.1",
     "mobx": "^6.1.8",
     "mobx-react-lite": "^3.2.0",
